Fixed modal hidden behind other modal bug.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -318,6 +318,13 @@
   font-size: 11px;
 }*/
 
+.players-modal {
+  z-index: 10;
+}
+
+.profile-modal {
+  z-index:  20; /* This is to make sure that the profile-modal is always shown above the players-modal. */
+}
 
 /* Create Game Styling */
 .date-item, .time-item {
@@ -332,7 +339,6 @@
   text-align: end;
   padding-right: 14% !important;
 }
-
 
 
 /* Profile Styling */
